@@ -1,5 +1,6 @@
 import org.gradle.api.tasks.TaskProvider
 import org.gradle.api.tasks.testing.Test
+import java.util.*
 
 object Tests {
     val lifecycleTag = "lifecycle"
@@ -11,5 +12,15 @@ fun Test.setup(jacocoTestReport: TaskProvider<*>) {
         events("passed", "skipped", "failed")
     }
     finalizedBy(jacocoTestReport) // report is always generated after tests run
-    jvmArgs = listOf("-Xmx2g", "-XX:+HeapDumpOnOutOfMemoryError", "-XX:HeapDumpPath=heapdump.hprof")
+    val majorJavaVersion =
+        Integer.parseInt(StringTokenizer(System.getProperty("java.specification.version"), ".").nextToken())
+
+    maxHeapSize = "8G"
+
+    if (majorJavaVersion >= 16) {
+        jvmArgs = listOf(
+            "--add-opens", "java.base/java.nio=ALL-UNNAMED", // this is necessary for LMDB
+            "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED" // this is necessary for LMDB
+        )
+    }
 }
